# tokenRingSim

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  imgui.ini
src/: Entity.h  Node.cpp  Node.h  Ring.cpp  Ring.h  Token.cpp  Token.h  Visualizer.cpp  Visualizer.h  entity.cpp  main.cpp
src/core/: Data.h  Entity.cpp  Entity.h  Node.cpp  Node.h  Ring.cpp  Ring.h  SimulationManager.cpp  SimulationManager.h  SpatialGrid.h  Token.cpp  Token.h
src/graphics/: UserInterface.cpp  UserInterface.h  Visualizer.cpp  Visualizer.h
src/utils/: Logger.h
